// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`task lz:errors:decode should print CustomError details 1`] = `
[
  {
    "Error": "CustomError: Contract reverted with custom error. Error UnsupportedEid()",
    "Type": "Custom error",
  },
]
`;

exports[`task lz:errors:decode should print CustomError details if the error is 0x751cb20f 1`] = `
[
  {
    "Error": "CustomError: Contract reverted with custom error. Error LZ_PathNotInitializable()",
    "Type": "Custom error",
  },
]
`;

exports[`task lz:errors:decode should print CustomError details if the error is 0xc3a1858e 1`] = `
[
  {
    "Error": "CustomError: Contract reverted with custom error. Error Executor_InvalidNativeDropOption()",
    "Type": "Custom error",
  },
]
`;

exports[`task lz:errors:decode should print PanicError details 1`] = `
[
  {
    "Error": "PanicError: Contract panicked (assert() has been called). Error code 6",
    "Type": "Panic error",
  },
]
`;

exports[`task lz:errors:decode should print RevertError details 1`] = `
[
  {
    "Error": "RevertError: Contract reverted. Error reason 'my bad'",
    "Type": "Revert error",
  },
]
`;
